add jackson support and refactor spi
Since Jackson needs to write two files anyway, the SPI was refactored to always return a Stream of results. Due to this, it is not necessary to keep two SPIs and just use one. The generator is then responsible for iterating over the validated elements itself.
Furthermore the result now allows to write ServiceLoader definitions.

Ksp resource folder was not setup correct, which caused generated resource files to be written to the source folder which causes warning in the compile step

Updated docs & samples

changed output package configuration & renamed config options